cmake_minimum_required(VERSION 3.27)
project(ITMARATHON_AMD)

set(CMAKE_CXX_STANDARD 17)

add_executable(ITMARATHON_AMD main.cpp
        CPU/CPU.cpp
        CPU/CPU.h
        CPU/Memory.cpp
        CPU/Memory.h
        CPU/InstructionFetch.cpp
        CPU/InstructionFetch.h
        CPU/DecodeInstruction.cpp
        CPU/DecodeInstruction.h
        CPU/ExecuteInstruction.cpp
        CPU/ExecuteInstruction.h
        CPU/LoadStoreData.cpp
        CPU/LoadStoreData.h
        CPU/CPUGenericMethod.cpp
        CPU/CPUGenericMethod.h
        CPU/AccesMemory.cpp
        CPU/AccesMemory.h
        Instructions/Base/Add.cpp
        Instructions/Base/Add.h
        Instructions/Base/Sub.cpp
        Instructions/Base/Sub.h
        Instructions/Base/Mov.cpp
        Instructions/Base/Mov.h
        Instructions/Base/Mul.cpp
        Instructions/Base/Mul.h
        Instructions/Base/Div.cpp
        Instructions/Base/Div.h
        Instructions/Base/Cmp.cpp
        Instructions/Base/Cmp.h
        Instructions/Base/Jmp.cpp
        Instructions/Base/Jmp.h
        Instructions/Base/Je.cpp
        Instructions/Base/Je.h
        Instructions/Base/Jl.cpp
        Instructions/Base/Jl.h
        Instructions/Base/Jg.cpp
        Instructions/Base/Jg.h
        Instructions/Base/Jz.cpp
        Instructions/Base/Jz.h
        Instructions/Base/Call.cpp
        Instructions/Base/Call.h
        Instructions/Base/Ret.cpp
        Instructions/Base/Ret.h
        Instructions/Base/End_sim.cpp
        Instructions/Base/End_sim.h
        Instructions/Base/Push.cpp
        Instructions/Base/Push.h
        Instructions/Base/Pop.cpp
        Instructions/Base/Pop.h
        Instructions/Flags/Flags.cpp
        Instructions/Flags/Flags.h
        Instructions/OPCODES.cpp
        Instructions/OPCODES.h
        Utils.cpp
        Utils.h
        Instructions/Base/GenericInstruction.cpp
        Instructions/Base/GenericInstruction.h
)
